# pDir

./: .gitignore  .travis.yml  CONTRIBUTING  ChangeLog  Makefile.am  NEWS  README.md  configure.ac
man/: pdir.1
po/: .gitignore  ja.po  pdir.pot
src/: error.c  error.h  list.c  list.h  main.c  pdir.h
tests/: init.sh
